<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="72dp">
            <ImageButton
                android:id="@+id/backToHomeButton"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@color/clear"
                android:contentDescription="@string/home"
                android:foreground="@drawable/click_effect"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/home_button"/>
            <GridLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:layout_weight="1"
                android:columnCount="1">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/privacy_policy"
                    android:fontFamily="@font/poppins_bold"
                    android:includeFontPadding="false"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:background="@drawable/info"
                    android:textAllCaps="true"/>
            </GridLayout>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="136dp"
            android:scrollbarThumbVertical="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/privacy_policy">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:text="@string/privacy_policy_text"/>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>